Development version
===================
- redirect() and redirect_to() now accept a keyword argument 'abort' to raise
  an exception to do the redirect.


Version 0.3 - August 05, 2010
=============================
- Routes store the handler, as we had in 0.1. This allows custom routes to
  have nested routes.
- Much improved URL building, now delegated to routes.
- added urlunsplit() helper.


Version 0.2 - August 04, 2010
=============================
- Fixed a bug in Route.match() that would make it return positional arguments
  with wrong order. Dictionary is correctly sorted now.
- Added build_only option for rules: rules that are only used for url_for() and
  never match.


Version 0.1 - August 03, 2010
=============================
- Initial release.